LPS-65863 use Base64.encode